--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "mongoose": "^7.4.1",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
