--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.0.5"
   }
 }
