--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
+    "slugify": "^1.6.6",
     "styled-components": "^6.0.5"
   }
 }
