--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "eslint-config-next": "13.4.12",
     "mongoose": "^7.4.1",
     "next": "13.4.12",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-number-format": "^5.2.2",
     "react-toastify": "^9.1.3",
     "slugify": "^1.6.6",
     "styled-components": "^6.0.5"
