--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-number-format": "^5.2.2",
     "react-toastify": "^9.1.3",
     "slugify": "^1.6.6",
+    "stripe": "^12.16.0",
     "styled-components": "^6.0.5"
   }
 }
