--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-number-format": "^5.2.2",
+    "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^9.1.3",
     "slugify": "^1.6.6",
     "stripe": "^12.16.0",
