--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-number-format": "^5.2.2",
+    "react-spinners": "^0.13.8",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^9.1.3",
     "slugify": "^1.6.6",
